[tool.poetry]
name = "headless-reality"
version = "0.0.1"
description = ""
authors = ["Daniel Burger <public@danielburger.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
